--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # SITE CONFIGURATION
-baseurl: "/Stat386"
+baseurl: "/Type-on-Strap"
 url: "https://lucystorts.github.io"
 
 # THEME-SPECIFIC CONFIGURATION
