--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # SITE CONFIGURATION
-baseurl: "/Type-on-Strap"
+baseurl: "/Stat386"
 url: "https://lucystorts.github.io"
 
 # THEME-SPECIFIC CONFIGURATION
@@ -53,5 +53,5 @@ sass:
 plugins: [jekyll-paginate, jekyll-seo-tag, jekyll-feed]
 exclude: [".jekyll-cache", ".jekyll-metadata", ".idea", "vendor/*", "assets/node_modules/*"]
 
-# theme: type-on-strap                                  # if using the theme as a jekyll theme gem
-remote_theme: sylhare/Type-on-Strap                     # If using as a remote_theme in github
+theme: type-on-strap                                  # if using the theme as a jekyll theme gem
+# remote_theme: sylhare/Type-on-Strap                     # If using as a remote_theme in github
