--- a/_config.yml
+++ b/_config.yml
@@ -5,12 +5,12 @@ url: "https://lucystorts.github.io"
 # THEME-SPECIFIC CONFIGURATION
 title: Data Dilemmas and Discussions                    # site's title
 description: This blog will explore my different interests in data science and catalog my projects. Thanks for stopping by!      # used by search engines
-avatar: assets/img/picofme.png                         # Empty for no avatar in navbar
+avatar: assets/img/SelfieCircle.png                         # Empty for no avatar in navbar
 favicon: assets/favicon.ico                             # Icon displayed in the tab
 
 # Header and footer text
 header_text: Data Dilemmas and Discussions  # Change Blog header text
-header_feature_image: assets/img/header/blogimage.png #YOU HAVE TO USE PNG IMAGES
+header_feature_image: assets/img/screensaver.png #YOU HAVE TO USE PNG IMAGES
 header_feature_image_responsive: true
 footer_text: >
   Powered by <a href="https://jekyllrb.com/">Jekyll</a> with <a href="https://github.com/sylhare/Type-on-Strap">Type on Strap</a>
