--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ avatar: assets/img/SelfieCircle.png                         # Empty for no avata
 favicon: assets/favicon.ico                             # Icon displayed in the tab
 
 # Header and footer text
-header_text: Data Dilemmas and Discussions  # Change Blog header text
+header_text: Hey, Welcome!  # Change Blog header text
 header_feature_image: assets/img/screensaver.png #YOU HAVE TO USE PNG IMAGES
 header_feature_image_responsive: true
 footer_text: >
